Fix dark mode on mentors page.

--- a/app/globals.css
+++ b/app/globals.css
@@ -89,15 +89,15 @@
     --nav-link-color: rgba(255, 255, 255, 0.5);
     --card: #132c59;
     --card-foreground: oklch(0.985 0 0);
-    --popover: oklch(0.205 0 0);
+    --popover: #132c59;
     --popover-foreground: oklch(0.985 0 0);
     --primary: oklch(0.922 0 0);
     --primary-foreground: oklch(0.205 0 0);
-    --secondary: oklch(0.269 0 0);
+    --secondary: #1e3a65;
     --secondary-foreground: oklch(0.985 0 0);
-    --muted: oklch(0.269 0 0);
-    --muted-foreground: oklch(0.708 0 0);
-    --accent: oklch(0.269 0 0);
+    --muted: #1e3a65;
+    --muted-foreground: #ffffffc9;
+    --accent: #1e3a65;
     --accent-foreground: oklch(0.985 0 0);
     --destructive: oklch(0.704 0.191 22.216);
     --border: oklch(1 0 0 / 10%);
